force-app/main/default/objects/Cotizacion_Prestador__c/Cotizacion_Prestador__c.object-meta.xml
<CustomObject>
    <label>Cotizacion Prestador</label>
    <nameField>
        <displayFormat>CPRES-{000000}</displayFormat>
        <label>Nombre de Cotizacion Prestador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cotizaciones Prestadores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>