force-app/main/default/objects/Cotizacion_Prestador__c/fields/Correo_prestador__c.field-meta.xml
<CustomField>
    <fullName>Correo_prestador__c</fullName>
    <formula>Prestador__r.Correo_electronico__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Correo prestador</label>
    <type>Text</type>
</CustomField>