force-app/main/default/objects/Cotizacion_Prestador__c/fields/Elige__c.field-meta.xml
<CustomField>
    <fullName>Elige__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Elige</label>
    <type>Checkbox</type>
</CustomField>