force-app/main/default/objects/Cotizacion_Prestador__c/fields/Fecha_Cotizacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Cotizacion__c</fullName>
    <label>Fecha Cotizacion</label>
    <type>Date</type>
</CustomField>