force-app/main/default/objects/Cotizacion_Prestador__c/fields/Mail_prestador__c.field-meta.xml
<CustomField>
    <fullName>Mail_prestador__c</fullName>
    <label>Mail prestador</label>
    <type>Email</type>
</CustomField>