force-app/main/default/objects/Cotizacion_Prestador__c/fields/Nombre_Prestador__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Prestador__c</fullName>
    <formula>Prestador__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Prestador</label>
    <type>Text</type>
</CustomField>