force-app/main/default/objects/Cotizacion_Prestador__c/fields/Observaciones__c.field-meta.xml
<CustomField>
    <fullName>Observaciones__c</fullName>
    <label>Observaciones</label>
    <length>255</length>
    <type>Text</type>
</CustomField>