force-app/main/default/objects/Cotizacion_Prestador__c/fields/Orden_de_Compra__c.field-meta.xml
<CustomField>
    <fullName>Orden_de_Compra__c</fullName>
    <label>Orden de Compra</label>
    <referenceTo>Orden_de_Compra__c</referenceTo>
    <relationshipLabel>Cotizaciones Prestadores</relationshipLabel>
    <relationshipName>Cotizaciones_Prestadores</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>