force-app/main/default/objects/Cotizacion_Prestador__c/fields/Total_a_Pagar__c.field-meta.xml
<CustomField>
    <fullName>Total_a_Pagar__c</fullName>
    <label>Total a Pagar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>