force-app/main/default/objects/Cotizacion_Prestador__c/fields/Total_Mejorado__c.field-meta.xml
<CustomField>
    <fullName>Total_Mejorado__c</fullName>
    <label>Total Mejorado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>