force-app/main/default/objects/Cotizacion_Prestador__c/fields/Total_Socio__c.field-meta.xml
<CustomField>
    <fullName>Total_Socio__c</fullName>
    <label>Total Socio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>