force-app/main/default/objects/Cotizacion_Prestador__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Orden_de_Compra__c</columns>
    <columns>Prestador__c</columns>
    <columns>Total_Mejorado__c</columns>
    <columns>Total_Presupuesto__c</columns>
    <columns>Total_Socio__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>